--- a/Rafat/Divide and Conquer.ipynb
+++ b/Rafat/Divide and Conquer.ipynb
@@ -17,55 +17,63 @@
     {
      "data": {
       "text/html": [
-       "\n",
        "<script>\n",
-       "  function code_toggle() {\n",
-       "    if (code_shown){\n",
-       "      $('div.input').hide('500');\n",
-       "      $('#toggleButton').val('Show Code')\n",
-       "    } else {\n",
-       "      $('div.input').show('500');\n",
-       "      $('#toggleButton').val('Hide Code')\n",
-       "    }\n",
-       "    code_shown = !code_shown\n",
+       "code_show=true; \n",
+       "function code_toggle() {\n",
+       "  if (code_show) {\n",
+       "    $('div.input').each(function(id) {\n",
+       "      el = $(this).find('.cm-variable:first');\n",
+       "      if (id == 0 || el.text() == 'hide_me') {\n",
+       "        $(this).hide();\n",
+       "      }\n",
+       "    });\n",
+       "    $('div.output_prompt').css('opacity', 0);\n",
+       "  } else {\n",
+       "    $('div.input').each(function(id) {\n",
+       "      $(this).show();\n",
+       "    });\n",
+       "    $('div.output_prompt').css('opacity', 1);\n",
        "  }\n",
-       "\n",
-       "  $( document ).ready(function(){\n",
-       "    code_shown=false;\n",
-       "    $('div.input').hide()\n",
-       "  });\n",
+       "  code_show = !code_show\n",
+       "} \n",
+       "$( document ).ready(code_toggle);\n",
        "</script>\n",
-       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form>"
+       "<form action=\"javascript:code_toggle()\"><input style=\"opacity:1\" type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
+     "execution_count": 1,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%html\n",
-    "\n",
-    "<script>\n",
-    "  function code_toggle() {\n",
-    "    if (code_shown){\n",
-    "      $('div.input').hide('500');\n",
-    "      $('#toggleButton').val('Show Code')\n",
-    "    } else {\n",
-    "      $('div.input').show('500');\n",
-    "      $('#toggleButton').val('Hide Code')\n",
-    "    }\n",
-    "    code_shown = !code_shown\n",
+    "from IPython.display import HTML\n",
+    "hide_me = ''\n",
+    "HTML('''<script>\n",
+    "code_show=true; \n",
+    "function code_toggle() {\n",
+    "  if (code_show) {\n",
+    "    $('div.input').each(function(id) {\n",
+    "      el = $(this).find('.cm-variable:first');\n",
+    "      if (id == 0 || el.text() == 'hide_me') {\n",
+    "        $(this).hide();\n",
+    "      }\n",
+    "    });\n",
+    "    $('div.output_prompt').css('opacity', 0);\n",
+    "  } else {\n",
+    "    $('div.input').each(function(id) {\n",
+    "      $(this).show();\n",
+    "    });\n",
+    "    $('div.output_prompt').css('opacity', 1);\n",
     "  }\n",
-    "\n",
-    "  $( document ).ready(function(){\n",
-    "    code_shown=false;\n",
-    "    $('div.input').hide()\n",
-    "  });\n",
+    "  code_show = !code_show\n",
+    "} \n",
+    "$( document ).ready(code_toggle);\n",
     "</script>\n",
-    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form>"
+    "<form action=\"javascript:code_toggle()\"><input style=\"opacity:1\" type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>''')"
    ]
   },
   {
@@ -160,10 +168,28 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/wVPCT1VjySA\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "[![Santas Dirty Sock](http://img.youtube.com/vi/wVPCT1VjySA/0.jpg)](<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/wVPCT1VjySA\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>\"Santa Dirty Socks\")"
+    "hide_me\n",
+    "\n",
+    "HTML('<<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/wVPCT1VjySA\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>')"
    ]
   },
   {
@@ -190,28 +216,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Application\n",
-    "\n",
-    "We turn to applications. Our aim is not to be comprehensive; divide and conquer explanations are invoked across all fields and subfields of law, history and the social sciences, and we lack the competence to evaluate most of those cases. Rather, we will select cases that allow us to illustrate the divide and conquer mechanisms.\n",
-    "\n",
-    "### Labor Law\n",
-    "Divide and conquer tactics have a long history in labor relations. Before the modern legal regime began in the 1930s, workers attempted to organize by forming a union and committing not to make separate agreements with the employer. The idea was to force the employer to bargain with the union representative rather than with workers individually, and also to prevent the employer from hiring replacement workers from outside the union. Employers resisted, and unions reacted by calling strikes, which would deprive the employer of all its workers en masse, and would also, through the picket line, prevent the employer from hiring replacements. Employers tried to preempt union organization by firing and intimidating organizers, and by bribing workers not to join unions, which is a classic divide and conquer tactics—and workers responded with sabotage and other forms of violence and resistance.\n",
-    "\n",
-    "\n",
-    "### Constitutional Design\n",
-    "\n",
-    "In the design of constitutions, divide and conquer strategies play a dual role, either as the problem that constitutional designers must solve or else as a solution that the designers themselves use to cope with other problems. In the first case, the problem for constitutional design is to prevent or inhibit the use of divide and conquer strategies by\n",
-    "the incumbent government, which may use those strategies to benefit itself while reducing overall welfare. In the second case, constitutions themselves raise the costs of cooperation to groups whose joint action would reduce overall welfare, such as a majority faction seeking to exploit minorities. In any given constitution, however, there will betradeoffs between these two desiderata: the same structures that make it easier for groupsto coalesce to defeat a welfare-reducing sovereign can also make it easier for groups to coalesce into an exploitative majority faction.\n",
-    " \n",
-    "Divide-and-conquer as a problem. In one well-known model of constitutionalism (Weingast 1997), the incumbent sovereign or government confronts two or more major political entities: states or provinces in a federal system, political parties, socioeconomic classes such as capitalists and workers, status groups such as nobles and commoners, or ethnic groups such as Hutus and Tutsis. The incumbent requires the support of at least one of the groups to remain in power, but if the two combine forces, the incumbent is deposed. Given this, the incumbent must decide whether to transgress against one or\n",
-    "both groups by violating their rights. It is assumed that doing so will benefit the incumbent, but reduce social welfare overall. The groups’ choice is whether to challenge the incumbent’s transgression or instead to acquiesce. \n",
-    "\n",
-    "### International Law\n",
-    "\n",
-    "\n",
-    "Political scientists writing about international relations frequently describe divideand-conquer behavior among states. The classic balance of power scenario involves a small number of Great Powers that are in a security competition—each state seeks to maximize its power at the expense of other states. Initially, there may be an equilibrium in which the states are at peace because neither state is powerful enough to defeat any other state. Then a shock occurs—one state, a “rising power,” like Germany at the end of the nineteenth century, poses a threat to one or more of its neighbors. Other states “balance” the rising power by forging alliances with the state or states being threatened. The balancers in this way attempt to anticipate and foreclose a divide-and-conquer strategy by the rising power, which, after conquering the first state and eliminating it as a threat, might turn its attention to one of the remaining states.\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
