Added instruction text to wiget

--- a/Vincent/fractionMultiplication/fractionMultiplication.ipynb
+++ b/Vincent/fractionMultiplication/fractionMultiplication.ipynb
@@ -29,9 +29,9 @@
     "\n",
     "$\\frac{a}{b}$ simply means $a\\div b$, now since a fraction is a division problem than it works well with multiplication, this means that multiplying fractions is easy and straight forward. <br>\n",
     "\n",
-    "In this notebook we will visit two forms of multiplying fractions\n",
+    "In this notebook we will look into two forms of fractions multiplication:\n",
     "- multiplying two fractions together ($\\frac{a}{b} \\times \\frac{c}{d}$)\n",
-    "- multiplying a fraction by a constant ($\\frac{a}{b} \\times c$)"
+    "- multiplying a fraction by a constant ($\\frac{a}{b} \\times c$ with $c$ an integer)"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "metadata": {},
    "source": [
     "### Procedure\n",
-    "As mentioned earlier, multiplying two fractions together is simple. Let's say we have two fractions, $\\frac{a}{b}$ and $\\frac{c}{d}$ and we want to multiply them together $\\frac{a}{b} \\times \\frac{c}{d}=x$. All we have to do is multiply the numerators (top number) together than multiply the denominators (bottom number) together. Let's take a look: \n",
+    "As mentioned earlier, multiplying two fractions together is simple. Let's say we have two fractions, $\\frac{a}{b}$ and $\\frac{c}{d}$ and we want to multiply them together <br> $\\frac{a}{b} \\times \\frac{c}{d}=x$. All we have to do is multiply the numerators (top number) together then multiply the denominators (bottom number) together. Let's take a look: \n",
     "\n",
     "$$\\frac{a}{b} \\times \\frac{c}{d}=\\frac{a\\times c}{b\\times d}=\\frac{ac}{bd}$$ <br>\n",
     "\n",
@@ -111,6 +111,11 @@
     "        /* float: right; */\n",
     "    }\n",
     "    \n",
+    "    #speech {\n",
+    "        margin: 50px;\n",
+    "        font-size: 150%;\n",
+    "    }\n",
+    "    \n",
     "    li {\n",
     "        margin-bottom: 15px;\n",
     "    }\n",
@@ -143,11 +148,12 @@
     "    </svg>\n",
     "  </div>\n",
     "  <div>\n",
-    "    <!-- ADD INSTRUCTION TEXT HERE -->\n",
+    "    <p id=\"speech\">Enter a fraction inside the boxes provided then click continue.</p>\n",
     "  </div>\n",
     "    \n",
     "  <div style=\"clear: left; margin-left: 10px\">\n",
-    "    <button type=\"button\" id=\"resetBtn\" class=\"btn btn-primary buttons\">Reset</button>\n"
+    "    <button type=\"button\" id=\"resetFractionBoxBtn\" class=\"btn btn-primary buttons\">Reset</button>\n",
+    "  </div>\n"
    ]
   },
   {
@@ -175,7 +181,7 @@
     "\n",
     "Let us practice what we just learned with a recipe example. Below you will see the ingredient list for my famous **Fresh Tomato and Basil Pasta Salad** recipe. This recipe makes enough for 4 servings, we would like to double the recipe in order to serve 8 people. Apply what we have learned so far to double the ingredients list for the **tomato and basil pasta salad** in order to make 8 servings. \n",
     "\n",
-    "(Enter your answer in the provided boxes, when your done click _check answer_ to see if you are correct!)"
+    "(Enter your answer in the provided boxes (fractions should be written using the _forward slash_ key \"/\" eg. 5/8), when your done click _check answer_ to see if you are correct!)"
    ]
   },
   {
@@ -203,6 +209,22 @@
     "<div>\n",
     "    <h2 id=\"answerStatus\"></h2>\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "Throughout this notebook we looked at how easy multiplying fractions together really is. We also looked at how to work with a fraction multiplied by a constant. Lets recap what we have learned:\n",
+    "\n",
+    "- When multiplying two fractions together we multiply the numerators together and the denominators together: $\\frac{a}{b}\\times\\frac{c}{d}=\\frac{a \\times c}{b \\times d} = \\frac{ac}{bd}$\n",
+    "\n",
+    "- A constant can always be rewritten as the constant over 1: $c = \\frac{c}{1}$\n",
+    "\n",
+    "- Multiplying a fraction with a constant, multiply the numerator by the constant and keep the denominator the same: $\\frac{a}{b}\\times c=\\frac{a\\times c}{b}=\\frac{ac}{b}$\n",
+    "\n",
+    "- Multiplying two fractions together is the same as saying _a part of a part_: $\\frac{a}{b}\\times\\frac{c}{d}$ is like saying $\\frac{a}{b}$ **of** $\\frac{c}{d}$ ($\\frac{3}{5}\\times\\frac{1}{4}$ is the same as _three fifths **of** one quarter_)"
    ]
   },
   {
@@ -306,8 +328,6 @@
     "};\n",
     "\n",
     "let isValid = function(numerator, denominator) {\n",
-    "  console.log(numerator);\n",
-    "  console.log(denominator);\n",
     "  if (numerator < 0 || numerator > 12) {\n",
     "    return false;\n",
     "  }\n",
@@ -335,15 +355,14 @@
     "\n",
     "let stateControler = function(state) {\n",
     "  currentState = state;\n",
+    "  setSpeech(state);\n",
     "\n",
     "  switch(state) {\n",
     "    case 0 :\n",
-    "      console.log('state 0');\n",
     "      resetInputs();\n",
     "      showInputBox('opperandInput');\n",
     "      break;\n",
     "    case 1 :\n",
-    "      console.log('state 1');\n",
     "      getOpperandInput('oppNumerator', 'oppDenominator', leftOpperand);\n",
     "      d3.select('#leftInputFractionText')\n",
     "        .text('$\\\\frac{'+leftOpperand.numerator+'}{'+leftOpperand.denominator+'} \\\\times$')\n",
@@ -353,14 +372,12 @@
     "      hideInputBox('opperandInput');\n",
     "      break;\n",
     "    case 2 :\n",
-    "      console.log('state 2');\n",
     "      fillBox(leftOpperand, Number(d3.select('#mainBox').attr('width')/leftOpperand.denominator) * leftOpperand.numerator, Number(d3.select('#mainBox').attr('height')), leftOpperand.colour, 1);\n",
     "      clearInput('oppNumerator');\n",
     "      clearInput('oppDenominator');\n",
     "      showInputBox('opperandInput');\n",
     "      break;\n",
     "    case 3 :\n",
-    "      console.log('state 3');\n",
     "      getOpperandInput('oppNumerator', 'oppDenominator', rightOpperand);\n",
     "      d3.select('#leftInputFractionText')\n",
     "        .text('$\\\\frac{'+leftOpperand.numerator+'}{'+leftOpperand.denominator+'} \\\\times$' + '$\\\\frac{'+rightOpperand.numerator+'}{'+rightOpperand.denominator+'}$');\n",
@@ -370,11 +387,9 @@
     "      hideInputBox('opperandInput');\n",
     "      break;\n",
     "    case 4 :\n",
-    "      console.log('state 4');\n",
     "      fillBox(rightOpperand, Number(d3.select('#mainBox').attr('width')), Number(d3.select('#mainBox').attr('height')/rightOpperand.denominator) * rightOpperand.numerator, rightOpperand.colour, 0.5);\n",
     "      break;\n",
     "    case 5 :\n",
-    "      console.log('state 5');\n",
     "      changeOpacity(leftOpperand, 1);\n",
     "      d3.select('#continueBtn').attr('disabled', true);\n",
     "      break;\n",
@@ -384,6 +399,19 @@
     "  }\n",
     "};\n",
     "\n",
+    "var speech = [\n",
+    "    \"Enter a fraction inside the boxes provided then click continue.\",\n",
+    "    \"Great! Now we can see the box has been divided in equal parts, these equal parts represent the denominator. Click continue when ready.\",\n",
+    "    \"Some of the equal parts have been filled in with pink, this pink represents the numerator. If we count the pink sections (numerator) and all the sections (denominator), we will get our original fraction. Enter another fraction to multiply then click continue.\",\n",
+    "    \"Ok, let’s focus on the second fraction, the first one is temporarily hidden for clarity. Same as before the box has been divided in equal parts representing the denominator. Click continue when ready.\",\n",
+    "    \"Now we have a blue section demonstrating the numerator of the second fraction. Click continue to multiply these two fractions.\",\n",
+    "    \"Awesome! The first fraction is back and overlaid with the second fraction. Now you can see the entire box has been divided into more equal parts. The purple section now represents the numerator to our answer. If we multiply the numerators from both fractions together and count all the purple sections, we should get the same number. Multiply the denominators together and count all the equal parts in the box and we should get the same value as well.\"\n",
+    "];\n",
+    "\n",
+    "function setSpeech(state) {\n",
+    "    d3.select('#speech').text(speech[state]);\n",
+    "};\n",
+    "\n",
     "document.getElementById('continueBtn').onclick = function() {\n",
     "  if(!isValid(Number(document.getElementById('oppNumerator').value), Number(document.getElementById('oppDenominator').value))){\n",
     "      alert('Make sure your factions are proper and the denominators less then or equal to 12');\n",
@@ -391,12 +419,13 @@
     "  else {\n",
     "    stateControler(currentState + 1);\n",
     "  }\n",
-    "}\n",
+    "};\n",
     "\n",
-    "document.getElementById('resetBtn').onclick = function() {\n",
+    "document.getElementById('resetFractionBoxBtn').onclick = function() {\n",
+    "  console.log(\"hello\");\n",
     "  resetInputs();\n",
     "  stateControler(0);\n",
-    "}\n",
+    "};\n",
     "</script>"
    ]
   },
@@ -423,7 +452,8 @@
     "        for(var i = 0; i < inputs.length; i++) {\n",
     "          inputs[i].value = '';\n",
     "        }\n",
-    "        d3.selectAll('.ingredientsInput').style('background-color', '#ffffff')\n",
+    "        d3.selectAll('.ingredientsInput').style('background-color', '#ffffff');\n",
+    "        d3.select('#answerStatus').text('');\n",
     "      };\n",
     "\n",
     "      function checkAnswers() {\n",
