--- a/Nathan/solvingProblemsUsingCombinations/solvingProblemsUsingCombinations.ipynb
+++ b/Nathan/solvingProblemsUsingCombinations/solvingProblemsUsingCombinations.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "![alt text][top-banner]\n",
     "\n",
-    "[top-banner]: ./imgs/callysto-top-banner.jpg"
+    "[top-banner]: ./images/callysto-top-banner.jpg"
    ]
   },
   {
@@ -116,8 +116,8 @@
    "metadata": {},
    "source": [
     "# Combinations\n",
+    "<p style=\"text-align: center;margin-right: 50px;\">*by Nathan Tipper*</p>\n",
     "\n",
-    "*by Nathan Tipper*\n",
     "\n",
     "In this Jupyter notebook, we will be exploring the concept of combinations. Combinations introduce another way to deal with certain types of counting problems along with permutations. Questions that can be asked and that can be solved using combinations include: \n",
     "\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -587,7 +587,6 @@
     {
      "data": {
       "text/html": [
-       "\n",
        "<div id=\"combination-exercises-container\">\n",
        "    \n",
        "</div>\n",
@@ -611,7 +610,6 @@
    ],
    "source": [
     "%%html\n",
-    "\n",
     "<div id=\"combination-exercises-container\">\n",
     "    \n",
     "</div>\n",
@@ -632,78 +630,8 @@
    "source": [
     "![alt text][bottom-banner]\n",
     "\n",
-    "[bottom-banner]: ./imgs/callysto-bottom-banner.jpg"
+    "[bottom-banner]: ./images/callysto-bottom-banner.jpg"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<script src=\"https://d3js.org/d3.v4.min.js\"></script>\n",
-       "<div id=\"test\">\n",
-       "\n",
-       "</div>\n",
-       "<script type=\"javascript\">\n",
-       "        console.log(\"hello\");\n",
-       "        var svg = d3.select(\"#test\")\n",
-       "                        .append(\"svg\")\n",
-       "                            .attr(\"height\", 300)\n",
-       "                            .attr(\"width\", 800)\n",
-       "                                .append(\"circle\")\n",
-       "                                    .attr(\"fill\", \"red\")\n",
-       "                                    .attr(\"cx\", 150)\n",
-       "                                    .attr(\"cy\", 150)\n",
-       "                                    .attr(\"r\", 50)\n",
-       "                                        .transition()\n",
-       "                                            .duration(2000)\n",
-       "                                                .attr(\"cx\", 500);\n",
-       "        console.log(d3);\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%%html\n",
-    "\n",
-    "<script src=\"https://d3js.org/d3.v4.min.js\"></script>\n",
-    "<div id=\"test\">\n",
-    "\n",
-    "</div>\n",
-    "<script type=\"javascript\">\n",
-    "        console.log(\"hello\");\n",
-    "        var svg = d3.select(\"#test\")\n",
-    "                        .append(\"svg\")\n",
-    "                            .attr(\"height\", 300)\n",
-    "                            .attr(\"width\", 800)\n",
-    "                                .append(\"circle\")\n",
-    "                                    .attr(\"fill\", \"red\")\n",
-    "                                    .attr(\"cx\", 150)\n",
-    "                                    .attr(\"cy\", 150)\n",
-    "                                    .attr(\"r\", 50)\n",
-    "                                        .transition()\n",
-    "                                            .duration(2000)\n",
-    "                                                .attr(\"cx\", 500);\n",
-    "        console.log(d3);\n",
-    "</script>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
