Finally have the demo working in an iframe

--- a/Nathan/coding/CodingCurriculum.ipynb
+++ b/Nathan/coding/CodingCurriculum.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -12,17 +12,7 @@
        "<script src=\"https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.6/p5.js\"></script>\n",
        "<script src=\"https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.6/addons/p5.dom.js\"></script>\n",
        "<script src=\"https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.6/addons/p5.sound.js\"></script>\n",
-       "<script>\n",
-       "    rows = 5,\n",
-       "    cols = 5,\n",
-       "    trafficControl = [\n",
-       "                        [ 1, 0, 1, 0, 1, 0 ],\n",
-       "                        [ 0, 1, 0, 1, 0, 1 ],\n",
-       "                        [ 1, 0, 1, 0, 1, 0 ], \n",
-       "                        [ 0, 1, 0, 1, 0, 1 ],\n",
-       "                        [ 1, 0, 1, 0, 1, 0 ], \n",
-       "                        [ 0, 1, 0, 1, 0, 1 ]\n",
-       "</script>"
+       "<link rel=\"stylesheet\" type=\"text/css\" href=\"css/coding.css\">"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -37,12 +27,13 @@
     "\n",
     "<script src=\"https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.6/p5.js\"></script>\n",
     "<script src=\"https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.6/addons/p5.dom.js\"></script>\n",
-    "<script src=\"https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.6/addons/p5.sound.js\"></script>"
+    "<script src=\"https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.6/addons/p5.sound.js\"></script>\n",
+    "<link rel=\"stylesheet\" type=\"text/css\" href=\"css/coding.css\">"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {
     "scrolled": false
    },
@@ -50,20 +41,36 @@
     {
      "data": {
       "text/html": [
+       "\n",
        "<script>\n",
-       "    var rows = 5,\n",
-       "    cols = 5,\n",
+       "    // Variables to change!!\n",
+       "    var rows = 1,\n",
+       "    cols = 10,\n",
        "    trafficControl = [\n",
-       "                        [ 1, 0, 1, 0, 1, 0 ],\n",
-       "                        [ 0, 1, 0, 1, 0, 1 ],\n",
-       "                        [ 1, 0, 1, 0, 1, 0 ], \n",
-       "                        [ 0, 1, 0, 1, 0, 1 ],\n",
-       "                        [ 1, 0, 1, 0, 1, 0 ], \n",
-       "                        [ 0, 1, 0, 1, 0, 1 ]\n",
-       "    ];\n",
+       "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ],\n",
+       "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ],\n",
+       "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ], \n",
+       "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ],\n",
+       "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ],\n",
+       "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ],\n",
+       "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ],\n",
+       "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ],\n",
+       "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ],\n",
+       "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ],\n",
+       "                    ];\n",
+       "    \n",
+       "     function setUpFrame() {\n",
+       "        var frame = window.frames[\"traffic-control\"];\n",
+       "        frame.contentWindow.init(rows, cols, trafficControl);\n",
+       "     }\n",
        "</script>\n",
        "\n",
-       "<iframe src=\"index.html\" width=\"900px\" height=\"500px\"></iframe>"
+       "<div id=\"btn-container\">\n",
+       "    <input type=\"button\" value=\"Draw\" onclick=\"setUpFrame()\">\n",
+       "</div>\n",
+       "<div id=\"iframe-container\">\n",
+       "    <iframe id=\"traffic-control\" src=\"index.html\" width=\"900px\" height=\"500px\"></iframe>\n",
+       "</div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -75,20 +82,36 @@
    ],
    "source": [
     "%%html\n",
+    "\n",
     "<script>\n",
-    "    var rows = 5,\n",
-    "    cols = 5,\n",
+    "    // Variables to change!!\n",
+    "    var rows = 1,\n",
+    "    cols = 10,\n",
     "    trafficControl = [\n",
-    "                        [ 1, 0, 1, 0, 1, 0 ],\n",
-    "                        [ 0, 1, 0, 1, 0, 1 ],\n",
-    "                        [ 1, 0, 1, 0, 1, 0 ], \n",
-    "                        [ 0, 1, 0, 1, 0, 1 ],\n",
-    "                        [ 1, 0, 1, 0, 1, 0 ], \n",
-    "                        [ 0, 1, 0, 1, 0, 1 ]\n",
+    "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ],\n",
+    "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ],\n",
+    "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ], \n",
+    "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ],\n",
+    "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ],\n",
+    "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ],\n",
+    "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ],\n",
+    "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ],\n",
+    "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ],\n",
+    "                        [ 1, 0, 0, 1, 0, 0, 1, 0, 0, 1 ],\n",
     "                    ];\n",
+    "    \n",
+    "     function setUpFrame() {\n",
+    "        var frame = window.frames[\"traffic-control\"];\n",
+    "        frame.contentWindow.init(rows, cols, trafficControl);\n",
+    "     }\n",
     "</script>\n",
     "\n",
-    "<iframe src=\"index.html\" width=\"900px\" height=\"500px\"></iframe>"
+    "<div id=\"btn-container\">\n",
+    "    <input type=\"button\" value=\"Draw\" onclick=\"setUpFrame()\">\n",
+    "</div>\n",
+    "<div id=\"iframe-container\">\n",
+    "    <iframe id=\"traffic-control\" src=\"index.html\" width=\"900px\" height=\"500px\"></iframe>\n",
+    "</div>"
    ]
   },
   {
