Divide and Conquer

--- a/Rafat/Divide and Conquer.ipynb
+++ b/Rafat/Divide and Conquer.ipynb
@@ -228,7 +228,7 @@
     "\n",
     "We do many tasks on a daily basis without even thinking about – or decomposing – them, such as brushing our teeth.\n",
     "\n",
-    "Example 1: Brushing our teeth\n",
+    "**Example 1**: Brushing our teeth\n",
     "To decompose the problem of how to brush our teeth, we would need to consider:\n",
     "\n",
     "1. which toothbrush to use\n",
@@ -245,8 +245,7 @@
    "source": [
     "### Recursion: \n",
     "\n",
-    "Recursion is a method of solving problems that involves breaking a problem down into smaller and smaller subproblems until you get to a small enough problem that it can be solved trivially. Usually recursion involves a function calling itself. While it may not seem like much on the surface, recursion allows us to write elegant solutions to problems that may otherwise be very difficult to program. Finally, Recursion is the process of defining a problem (or the solution to a problem) in terms of (a simpler version of) itself.\n",
-    "For example, we can define the operation \"find your way home\" as:\n",
+    "Recursion is a method of solving problems that involves breaking a problem down into smaller and smaller subproblems until you get to a small enough problem that it can be solved trivially. Usually recursion involves a function calling itself. While it may not seem like much on the surface, recursion allows us to write elegant solutions to problems that may otherwise be very difficult to program. Finally, Recursion is the process of defining a problem (or the solution to a problem) in terms of (a simpler version of) itself. For example, we can define the operation \"find your way home\" as:\n",
     "\n",
     "1. If you are at home, stop moving.\n",
     "\n",
@@ -376,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -386,6 +385,16 @@
        "<html>\n",
        "<h2>HTML Image</h2>\n",
        "<img src=\"divide-and-conquer_1.png\" alt=\"drawing\" width=\"500\" height=\"333\" style=\"float:middle\">\n",
+       "</html>\n",
+       "\n",
+       "<!DOCTYPE html>\n",
+       "<html>\n",
+       "<body>\n",
+       "\n",
+       "<p>This is some text. This is some text. This is some text.\n",
+       "<img src=\"divide-and-conquer_1.png\" width=\"200\" height=\"200\" style=\"float:middle\">\n",
+       "</img>\n",
+       "</body>\n",
        "</html>"
       ],
       "text/plain": [
