Divide and Conquer second commit

--- a/Rafat/Divide and Conquer.ipynb
+++ b/Rafat/Divide and Conquer.ipynb
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -383,18 +383,8 @@
       "text/html": [
        "<!DOCTYPE html>\n",
        "<html>\n",
-       "<h2>HTML Image</h2>\n",
+       "\n",
        "<img src=\"divide-and-conquer_1.png\" alt=\"drawing\" width=\"500\" height=\"333\" style=\"float:middle\">\n",
-       "</html>\n",
-       "\n",
-       "<!DOCTYPE html>\n",
-       "<html>\n",
-       "<body>\n",
-       "\n",
-       "<p>This is some text. This is some text. This is some text.\n",
-       "<img src=\"divide-and-conquer_1.png\" width=\"200\" height=\"200\" style=\"float:middle\">\n",
-       "</img>\n",
-       "</body>\n",
        "</html>"
       ],
       "text/plain": [
@@ -409,7 +399,7 @@
     "%%html\n",
     "<!DOCTYPE html>\n",
     "<html>\n",
-    "<h2>HTML Image</h2>\n",
+    "\n",
     "<img src=\"divide-and-conquer_1.png\" alt=\"drawing\" width=\"500\" height=\"333\" style=\"float:middle\">\n",
     "</html>\n"
    ]
@@ -506,7 +496,7 @@
    "source": [
     "### Follow up discussion\n",
     "\n",
-    "* Consider doing the activity with a balance scale and, say, 32 weights that are identical except one. \n",
+    "* Consider devloping a divide and conquer strategy with a balance scale and, say, 32 weights that are identical except one. \n",
     "* Now engage in a thought experiment – how many more weighings would be needed if there were 64 weights? [Just one more weighing is needed.]\n",
     "\n",
     "* If there were 2048 boxes, how many weighings would this process take [11 weighings, that is, just one more than for 1024 boxes]\n",
@@ -527,19 +517,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/Xklidm3v96M\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>"
+       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/jLQnDC07040\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +537,7 @@
    "source": [
     "hide_me\n",
     "\n",
-    "HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/Xklidm3v96M\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>')"
+    "HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/jLQnDC07040\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>')"
    ]
   },
   {
@@ -576,7 +566,17 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "\n"
+    "\n",
+    "Divide and Conquer algorithm is an efficent way to solve problems that can be broken into smaller problem. This algorithm has vast impact on real life stategies like making constitution, labor laws and economics."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text][bottom-banner]\n",
+    "\n",
+    "[bottom-banner]: ./callysto-bottom-banner.jpg"
    ]
   },
   {
