--- a/Rafat/Divide and Conquer.ipynb
+++ b/Rafat/Divide and Conquer.ipynb
@@ -507,6 +507,128 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! What is your name?\n",
+      "rafat\n",
+      "Well, rafat, I am thinking of a number between 1 and 20.\n",
+      "Take a guess.\n",
+      "5\n",
+      "Your guess is too low.\n",
+      "Nope. The number I was thinking of was 14\n",
+      "Take a guess.\n",
+      "12\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'<' not supported between instances of 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-59-c03b76ba36cf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0mguessesTaken\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mguessesTaken\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mguess\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mnumber\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Your guess is too low.'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# There are eight spaces in front of print.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'int' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "# This is a guess the number game.\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "\n",
+    "guessesTaken = 0\n",
+    "\n",
+    "print('Hello! What is your name?')\n",
+    "myName = input()\n",
+    "number = random.randint(1, 20)\n",
+    "print('Well, ' + myName + ', I am thinking of a number between 1 and 20.')\n",
+    "\n",
+    "while guessesTaken < 6:\n",
+    "    print('Take a guess.') # There are four spaces in front of print.\n",
+    "    guess = input()\n",
+    "    guess = int(guess)\n",
+    "    guessesTaken = guessesTaken + 1\n",
+    "    \n",
+    "    if guess < number:\n",
+    "        print('Your guess is too low.') # There are eight spaces in front of print.\n",
+    "\n",
+    "    if guess > number:\n",
+    "        print('Your guess is too high.')\n",
+    "\n",
+    "    if guess == number:\n",
+    "        break\n",
+    "\n",
+    "    if guess == number:\n",
+    "        guessesTaken = str(guessesTaken)\n",
+    "        print('Good job, ' + myName + '! You guessed my number in ' + guessesTaken + ' guesses!')\n",
+    "\n",
+    "\n",
+    "    if guess != number:\n",
+    "        number = str(number)\n",
+    "        print('Nope. The number I was thinking of was ' + number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def number_guessing_game(low, high, rounds):\n",
+    "    print(\"Guess a number between {low} and {high}. You have {rounds} rounds to try and guess correctly.\".format(low=low, high=high, rounds=rounds))\n",
+    "    number = random.randint(low, high)\n",
+    "\n",
+    "    for _ in range(rounds):\n",
+    "        guess = input(\"Enter an integer: \")\n",
+    "\n",
+    "        try:\n",
+    "            integer = int(guess)\n",
+    "            if integer == number:\n",
+    "                print('You won!!!')\n",
+    "                return\n",
+    "            elif integer < number:\n",
+    "                print('Try Higher')\n",
+    "            elif integer > number:\n",
+    "                print('Try Lower')\n",
+    "\n",
+    "        except ValueError:\n",
+    "            print(\"You must enter a valid integer.\")\n",
+    "\n",
+    "    print(\"You didn't guess correctly in {rounds} rounds. You lost.\".format(rounds=rounds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guess a number between 1 and 100. You have 7 rounds to try and guess correctly.\n",
+      "Enter an integer: 23\n",
+      "Try Higher\n",
+      "Enter an integer: 50\n",
+      "Try Lower\n",
+      "Enter an integer: 25\n",
+      "You won!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_guessing_game(1, 100, 7)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
