--- a/Nicole/ConcentrationAndPH/Concentration_and _pH.ipynb
+++ b/Nicole/ConcentrationAndPH/Concentration_and _pH.ipynb
@@ -83,12 +83,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import IPython\n",
-    "import ipywidgets as widgets"
+    "import ipywidgets as widgets\n",
+    "import IPython"
    ]
   },
   {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c30ac4de8c224de5aa04988ce9c605cb",
+       "model_id": "53707b0ee5f44862b48618cd9812bc98",
        "version_major": 2,
        "version_minor": 0
       },
@@ -313,7 +313,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db6aef095dbf439e96dd8346b08709d8",
+       "model_id": "66a0b7823c09483586793fa8d85d553d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -392,7 +392,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4ee1dc6b40f4e75b6bd797988add646",
+       "model_id": "fef4896557654f60817e26d7bb2f8574",
        "version_major": 2,
        "version_minor": 0
       },
@@ -456,7 +456,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ebfc1fbcf86f43b28b8ed1a549f18ae5",
+       "model_id": "de2bee4f152746209a9ba6ca718e8b01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -553,7 +553,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3e766e365cf416c9b1001091ecd7e88",
+       "model_id": "fa7ac98f3e814f57a49754a5f05b06eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -645,7 +645,7 @@
       "text/html": [
        "\n",
        "<script type = \"text/javascript\" src=\"https://d3js.org/d3.v3.min.js\"></script>\n",
-       "<script type = \"text/javascript\" src=\"pH_Animation/animation2.js\"></script>"
+       "<script type = \"text/javascript\" src=\"sources/animation2.js\"></script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -659,7 +659,7 @@
     "%%html\n",
     "\n",
     "<script type = \"text/javascript\" src=\"https://d3js.org/d3.v3.min.js\"></script>\n",
-    "<script type = \"text/javascript\" src=\"pH_Animation/animation2.js\"></script>"
+    "<script type = \"text/javascript\" src=\"sources/animation2.js\"></script>"
    ]
   },
   {
@@ -674,9 +674,11 @@
        "<div id=\"animation\"></div>\n",
        "\n",
        "<script>\n",
-       "display(10); # 10 represents the pH of the solution in the beaker. \n",
-       "            #If this is changed then the question below the lab might not have the right answer.\n",
-       "</script>"
+       "display(10); \n",
+       "</script>\n",
+       "\n",
+       "# 10 represents the pH of the solution in the beaker. \n",
+       "#If this is changed then the question below the lab might not have the right answer."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -692,14 +694,16 @@
     "<div id=\"animation\"></div>\n",
     "\n",
     "<script>\n",
-    "display(10); # 10 represents the pH of the solution in the beaker. \n",
-    "            #If this is changed then the question below the lab might not have the right answer.\n",
-    "</script>"
+    "display(10); \n",
+    "</script>\n",
+    "\n",
+    "# 10 represents the pH of the solution in the beaker. \n",
+    "#If this is changed then the question below the lab might not have the right answer."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +716,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64bc6c4acc37468f83df1959bf030af5",
+       "model_id": "24a624cc451548a1bb2e632c973f506d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -784,8 +788,8 @@
      "data": {
       "text/html": [
        "\n",
-       "<link rel=\"stylesheet\" type=\"text/css\" href=\"pH_Animation/dropperstyle.css\">\n",
-       "<script type = \"text/javascript\" src=\"pH_Animation/dropperAnimation.js\"></script>"
+       "<link rel=\"stylesheet\" type=\"text/css\" href=\"sources/dropperstyle.css\">\n",
+       "<script type = \"text/javascript\" src=\"sources/dropperAnimation.js\"></script>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -798,8 +802,8 @@
    "source": [
     "%%html\n",
     "\n",
-    "<link rel=\"stylesheet\" type=\"text/css\" href=\"pH_Animation/dropperstyle.css\">\n",
-    "<script type = \"text/javascript\" src=\"pH_Animation/dropperAnimation.js\"></script>"
+    "<link rel=\"stylesheet\" type=\"text/css\" href=\"sources/dropperstyle.css\">\n",
+    "<script type = \"text/javascript\" src=\"sources/dropperAnimation.js\"></script>"
    ]
   },
   {
@@ -867,7 +871,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "074b91b4af37405bbbae0847bc76b6d6",
+       "model_id": "f628be7a249a49ada7961a0b0dc0fe92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -930,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +946,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
