--- a/Nicole/IntroductionToPoetry/poetry-introduction.ipynb
+++ b/Nicole/IntroductionToPoetry/poetry-introduction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
    "source": [
     "# Introduction to Poetry\n",
     "\n",
-    "There are lots of types of poetry. We will look at a haiku (hi-koo), a diamante (dee-a-mon-tay) poem, a limerick (limm-r-ik), and a cinquain(sin-kain). Each one has a structure that makes it unique. Not all poems need to rhyme. Some poems have a certain number of syllables. \n",
+    "There are lots of types of poetry. We will look at a haiku (hi-koo), a diamante (dee-a-mon-tay) poem, a limerick (limm-r-ik), and a cinquain (sin-kain). Each one has a structure that makes it unique. Not all poems need to rhyme. Some poems have a certain number of syllables. \n",
     "\n",
     "#### Types of Poetry\n",
     "1. Shape poetry\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,13 +224,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0dd26fa17a57408d88bd24e5b95fda73",
+       "model_id": "471688074fc54e75b7f38ee9d1ea8d35",
        "version_major": 2,
        "version_minor": 0
       },
@@ -302,13 +302,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ba35237a2a84f578df7e3a58e650e40",
+       "model_id": "1034ac860a6742ed9df6a3a20c3a4d36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -337,7 +337,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f56a2d6945df4416a60ba4a25c516a76",
+       "model_id": "0d502793632c4c768a2c315a691ca668",
        "version_major": 2,
        "version_minor": 0
       },
@@ -471,13 +471,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e9801b8b12e43139ca0aa4b8a973f62",
+       "model_id": "a3a726a2f8ec413ebcf91c9909639938",
        "version_major": 2,
        "version_minor": 0
       },
@@ -524,13 +524,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a061307cc86c460491b425e100f8b367",
+       "model_id": "d7758ee7b6b0459abf7507f66694b2b5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,6 +652,80 @@
     "> And frightened Miss Muffet away.\n",
     "\n",
     "Does this rhyming pattern match the one for a limerick?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script type = \"text/javascript\" src=\"https://d3js.org/d3.v3.min.js\"></script>\n",
+       "<script type = \"text/javascript\" src=\"sources/poemHighlight.js\"></script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "\n",
+    "<script type = \"text/javascript\" src=\"https://d3js.org/d3.v3.min.js\"></script>\n",
+    "<script type = \"text/javascript\" src=\"sources/poemHighlight.js\"></script>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div id=\"Highlight\">\n",
+       "<input id=\"reset\" type=\"button\" value=\"Reset\" onclick=\"resetHL()\">\n",
+       "</div>\n",
+       "<div>\n",
+       "<input id=\"submit\" type=\"button\" value=\"Submit\" onclick=\"submit()\"> \n",
+       "<br />\n",
+       "<text x=\"50\" y=\"300\" font-family=\"sans-serif\" font-size=\"15px\" id=\"result\"> </text>\n",
+       "</div>\n",
+       "\n",
+       "<script>\n",
+       "display();\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "\n",
+    "<div id=\"Highlight\">\n",
+    "<input id=\"reset\" type=\"button\" value=\"Reset\" onclick=\"resetHL()\">\n",
+    "</div>\n",
+    "<div>\n",
+    "<input id=\"submit\" type=\"button\" value=\"Submit\" onclick=\"submit()\"> \n",
+    "<br />\n",
+    "<text x=\"50\" y=\"300\" font-family=\"sans-serif\" font-size=\"15px\" id=\"result\"> </text>\n",
+    "</div>\n",
+    "\n",
+    "<script>\n",
+    "display();\n",
+    "</script>"
    ]
   },
   {
