--- a/Vincent/fractionMultiplication/fractionMultiplication.ipynb
+++ b/Vincent/fractionMultiplication/fractionMultiplication.ipynb
@@ -176,6 +176,7 @@
     "And now we can solve the problem as shown before:\n",
     "\n",
     "$$\\frac{5}{13}\\times\\frac{2}{1} = \\frac{5\\times 2}{13\\times 1}= \\frac{10}{13} $$\n",
+    "*Note that $\\dfrac{2}{1}$ is an improper fraction, improper fractions follow all the same rules for multiplying*\n",
     "\n",
     "The big take away from this is that the denominator does not change as it is simply multiplied by $1$. This means we did not change the _\"whole\"_, we only changed how many parts of the _\"whole\"_ we have (the numerator). In effect all we did was simply double our fraction since our constant was 2. <br>\n",
     "\n",
@@ -193,7 +194,9 @@
     "%%html\n",
     "<div class=\"ingredientsList\">\n",
     "    <h1>Fresh Tomato and Basil Pasta Salad</h1>\n",
-    "      <ul style=\"max-width: 500px;\">\n",
+    "    <img src=\"./images/pastaSalad.jpg\" width=250 style=\"float: left; margin-right: 50px; box-shadow: 5px 6px 25px 3px grey\">\n",
+    "\n",
+    "      <ul style=\"max-width: 700px;\">\n",
     "        <li><label>3 medium ripe tomatoes, chopped --></label><input id=\"tomatoes\" class=\"ingredientsInput\"></input><label>tomatoes</label></li>\n",
     "        <li><label>1/3 cup thinly sliced fresh basil --></label><input id=\"basil\" class=\"ingredientsInput\"></input><label>cup</label></li>\n",
     "        <li><label>2 Tbsp. olive oil --></label><input id=\"olivOil\" class=\"ingredientsInput\"></input><label>Tbsp.</label></li>\n",
@@ -235,29 +238,29 @@
    "source": [
     "%%html\n",
     "<script>\n",
-    "let leftOpperand = {\n",
+    "var leftOpperand = {\n",
     "    id: 'leftOpperand',\n",
     "    numerator: Number(0),\n",
     "    denominator: Number(0),\n",
     "    colour: '#ff0066'\n",
     "};\n",
     "\n",
-    "let rightOpperand = {\n",
+    "var rightOpperand = {\n",
     "    id: 'rightOpperand',\n",
     "    numerator: Number(0),\n",
     "    denominator: Number(0),\n",
     "    colour: '#0000ff'\n",
     "};\n",
     "\n",
-    "let currentState = 0;\n",
+    "var currentState = 0;\n",
     "\n",
-    "let getOpperandInput = function(numeratorInput, denominatorInput, opperand) {\n",
+    "var getOpperandInput = function(numeratorInput, denominatorInput, opperand) {\n",
     "  opperand.numerator = document.getElementById(numeratorInput).value;\n",
     "  opperand.denominator = document.getElementById(denominatorInput).value;\n",
     "\n",
     "}\n",
     "\n",
-    "let verticalDivide = function(xVal, lineNum) {\n",
+    "var verticalDivide = function(xVal, lineNum) {\n",
     "    var i = xVal;\n",
     "    while(lineNum > 0){\n",
     "      addLine(Number(i + 10), Number(i + 10), 10, Number(d3.select('#mainBox').attr('height')) + 10);\n",
@@ -266,7 +269,7 @@
     "    }\n",
     "};\n",
     "\n",
-    "let horizontalDivide = function(xVal, lineNum) {\n",
+    "var horizontalDivide = function(xVal, lineNum) {\n",
     "    var i = Number(xVal);\n",
     "    while(lineNum > 0){\n",
     "      addLine(10, Number(d3.select('#mainBox').attr('width')) + 10, Number(i + 10), Number(i +10));\n",
@@ -275,9 +278,9 @@
     "    }\n",
     "};\n",
     "\n",
-    "let addLine = function (x1, x2, y1, y2,) {\n",
-    "    let dashed = '0,0';\n",
-    "    let stroke = 2;\n",
+    "var addLine = function (x1, x2, y1, y2,) {\n",
+    "    var dashed = '0,0';\n",
+    "    var stroke = 2;\n",
     "\n",
     "    d3.select('#mainCanvas').append('line')\n",
     "        .attr('class', 'divLine ')\n",
@@ -289,7 +292,7 @@
     "        .style('stroke-width', stroke);\n",
     "};\n",
     "\n",
-    "let fillBox = function(box, width, height, colour, opacity) {\n",
+    "var fillBox = function(box, width, height, colour, opacity) {\n",
     "    d3.select('#' + box.id)\n",
     "    .style('fill', colour)\n",
     "    .style('opacity', opacity)\n",
@@ -300,7 +303,7 @@
     "        .attr('height', height);\n",
     "};\n",
     "\n",
-    "let changeOpacity = function(box, opacity) {\n",
+    "var changeOpacity = function(box, opacity) {\n",
     "    d3.select('#' + box.id).transition().delay(function (d, i) {\n",
     "        return i * 300;\n",
     "      }).duration(500)\n",
@@ -312,7 +315,7 @@
     "    .style('opacity', opacity);\n",
     "};\n",
     "\n",
-    "let resetInputs = function() {\n",
+    "var resetInputs = function() {\n",
     "    d3.select('#continueBtn').attr('disabled', null);\n",
     "    d3.selectAll('.divLine').remove();\n",
     "    d3.select('#leftOpperand').attr('width', 0);\n",
@@ -327,7 +330,7 @@
     "\n",
     "};\n",
     "\n",
-    "let isValid = function(numerator, denominator) {\n",
+    "var isValid = function(numerator, denominator) {\n",
     "  if (numerator < 0 || numerator > 12) {\n",
     "    return false;\n",
     "  }\n",
@@ -337,23 +340,23 @@
     "  return (numerator < denominator);\n",
     "};\n",
     "\n",
-    "let updateMathJax = function() {\n",
+    "var updateMathJax = function() {\n",
     "  MathJax.Hub.Queue([\"Typeset\",MathJax.Hub]);\n",
     "};\n",
     "\n",
-    "let showInputBox = function(inputId) {\n",
+    "var showInputBox = function(inputId) {\n",
     "  d3.select('#' + inputId).style('display', 'block');\n",
     "};\n",
     "\n",
-    "let hideInputBox = function(inputId) {\n",
+    "var hideInputBox = function(inputId) {\n",
     "  d3.select('#' + inputId).style('display', 'none');\n",
     "};\n",
     "\n",
-    "let clearInput = function(inputId) {\n",
+    "var clearInput = function(inputId) {\n",
     "  document.getElementById(inputId).value = '';\n",
     "}\n",
     "\n",
-    "let stateControler = function(state) {\n",
+    "var stateControler = function(state) {\n",
     "  currentState = state;\n",
     "  setSpeech(state);\n",
     "\n",
