Added final version of Eco.

--- a/Nathan/eco/Eco.ipynb
+++ b/Nathan/eco/Eco.ipynb
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -1134,15 +1134,93 @@
     "\n",
     "![alt text][table1]\n",
     "\n",
-    "[table1]: ./imgs/davosdilemma.png"
+    "[table1]: ./imgs/davosdilemma.png\n",
+    "\n",
+    "Taking this illustration into consideration, how can you reduce your ecological footprint?\n",
+    "\n",
+    "## Exercises\n",
+    "\n",
+    "1. Pair up with a classmate and compare your results.\n",
+    "\n",
+    "  * What is your ecological footprint?\n",
+    "  * What is your classmate's ecological footprint?\n",
+    "  * Why are they similar or different?\n",
+    "  * Were you shocked when you found out what your footprint was?\n",
+    "\n",
+    "2. With your partner, use buildings and areas to visualize how big or small your ecological footprint might be.\n",
+    "\n",
+    "  With all the following, add buildings and areas to fill up the same (or close to) amount of areas as your footprint.\n",
+    "\n",
+    "  * Small backyard: 0.01 acres\n",
+    "  * Medium backyard: 0.04 acres\n",
+    "  * Large backyard: 0.09 acres\n",
+    "  * Average Subway: 0.03 acres\n",
+    "  * Average Safeway: 1.09 acres\n",
+    "  * Football field: 1.32 acres\n",
+    "  * Average Walmart: 2.41 acres\n",
+    "  * Average Costco 3.32 acres\n",
+    "  * Nikka Yuko Japanese Garden: 3.75 acres\n",
+    "  * Galt Gardens: 9.16 acres\n",
+    "  * Henderson Lake: 60 acres\n",
+    "  * University Of Lethbridge: 460 acres\n",
+    "  \n",
+    "__Example__: John's ecological footprint is 16 acres. This equals to the Galt Gardens (9.16 acres), the Japanese Garden (3.75 acres), an average Walmart (2.41 acres) and an average Safeway (1.09 acres).\n",
+    "\n",
+    "* 9.16 + 3.75 + 2.41 + 1.09 = 16.41 acres.\n",
+    "* My footprint is roughly equivalent to these 4 common areas/buildings\n",
+    "\n",
+    "3. With climate change becoming more and more of an everyday issue, several African countries have experienced extreme droughts. Cape Town, the capital of South Africa, is nearing __Day Zero__. This is the day where all the water taps in the city will be turned off and citizens will have to line up at communal taps to get their daily allowance of water.\n",
+    "\n",
+    "Watch this short video produced by the City of Cape Town that explains the crisis:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"854\" height=\"480\" src=\"https://www.youtube.com/embed/NbQ4GxUAivk\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<iframe width=\"854\" height=\"480\" src=\"https://www.youtube.com/embed/NbQ4GxUAivk\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With global temperatures rising anually, these droughts could become more common than ever before. That being said, Canada could also experience droughts and limit the amount of water usage per household.\n",
+    "\n",
+    "With a partner, add up how much water you use in a typical day and convert it to Litres using the following formula:\n",
+    "\n",
+    " ________ gal * 3.76 = _______ L\n",
+    " \n",
+    " * Is your answer above or below 340L (the average daily water usage of Canadians)?\n",
+    " * What tip can you use to reduce your daily water usage?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Summary__:\n",
+    "\n",
+    "In a globalized world, productiuon and consumerism is essential to maintain or strengthen economies. As we continue to contribute to this phenomenon, whether consciously or not, we have an impact on our environment. Our reality comes with a crucial question: can we maintain a sustainable lifestyle without compromising future generations? In this unit, we will focus on the __ecological footprint__ to understand how big of a mark we leave behind.\n",
+    "           \n",
+    "The ecological footprint measures how much land and manpower is required to produce what we consume and absorb the waste we inevitably generate. So, it is measured in hectares or acres to give a visual of the given influence. The previous few activities will indicate to the student how small or large their ecological footprint is and will give them an idea of what they overconsume and how they could reduce their intake and waste."
+   ]
   },
   {
    "cell_type": "markdown",
